# surface-pd

./: .gitignore  .readthedocs.yaml  README.md  auto-enum-Li-attempt4.py  modified_structure.vasp  ortho-LNO-104-2x2x1-5fixed-perpendicular-50Li.vasp  pyproject.toml  requirements.txt  setup.py  surface-enumeration.py  transformed_structure.vasp
.github/: READTHEDOCS.md
.github/workflows/: ci.yml
0.0Li0.0O/: structure-0.vasp
0.0Li1.0O/: structure-0.vasp
0.5Li0.0O/: structure-0.vasp  structure-1.vasp  structure-2.vasp  structure-3.vasp
0.5Li0.25O/: structure-0.vasp  structure-1.vasp  structure-10.vasp  structure-11.vasp  structure-12.vasp  structure-13.vasp  structure-14.vasp  structure-15.vasp  structure-16.vasp  structure-17.vasp  structure-18.vasp  structure-19.vasp  structure-2.vasp  structure-3.vasp  structure-4.vasp  structure-5.vasp  structure-6.vasp  structure-7.vasp  structure-8.vasp  structure-9.vasp
0.5Li0.75O/: structure-0.vasp  structure-1.vasp  structure-10.vasp  structure-11.vasp  structure-12.vasp  structure-13.vasp  structure-14.vasp  structure-15.vasp  structure-16.vasp  structure-17.vasp  structure-18.vasp  structure-19.vasp  structure-2.vasp  structure-21.vasp  structure-3.vasp  structure-4.vasp  structure-5.vasp  structure-6.vasp  structure-7.vasp  structure-8.vasp  structure-9.vasp
0.5Li1.0O/: structure-0.vasp  structure-1.vasp  structure-2.vasp  structure-3.vasp  structure-4.vasp  structure-5.vasp  structure-6.vasp  structure-7.vasp
0.75Li1.0O/: structure-0.vasp  structure-1.vasp  structure-2.vasp  structure-3.vasp
1.0Li0.0O/: structure-0.vasp
1.0Li1.0O/: structure-0.vasp
1x1x1/: 1_LiNiO2_mp-865631_super_1x1x1.vasp
1x2x1/: 0_LiNiO2_mp-865631_super_1x2x1.vasp  1_LiNiO2_mp-865631_super_1x2x1.vasp
2x1x1/: 0_LiNiO2_mp-865631_super_2x1x1.vasp  1_LiNiO2_mp-865631_super_2x1x1.vasp
LNO_001/1x2x1/: Ni_terminated_CONTCAR-LiNiO2_mp-865631_super_1x2x1.vasp
LNO_001/2x1x1/: Li_terminated_CONTCAR-LiNiO2_mp-865631_super_2x1x1.vasp  Ni_terminated_CONTCAR-LiNiO2_mp-865631_super_2x1x1.vasp
LNO_001_2x1x1_results/0.25Li0.25O/: structure-0.vasp  structure-3.vasp  structure-8.vasp
LNO_001_2x1x1_results/0.25Li0.5O/: structure-17.vasp  structure-3.vasp
LNO_001_2x1x1_results/0.25Li0.75O/: structure-11.vasp  structure-5.vasp
LNO_001_2x1x1_results/0.25Li1O/: structure-0.vasp
LNO_001_2x1x1_results/0.5Li0.25O/: structure-12.vasp  structure-16.vasp  structure-5.vasp
LNO_001_2x1x1_results/0.5Li0.5O/: structure-12.vasp  structure-14.vasp  structure-22.vasp  structure-6.vasp
LNO_001_2x1x1_results/0.5Li0.75O/: structure-12.vasp  structure-14.vasp  structure-15.vasp  structure-17.vasp  structure-4.vasp  structure-8.vasp  structure-9.vasp
LNO_001_2x1x1_results/0.5Li0O/: structure-3.vasp
LNO_001_2x1x1_results/0.75Li0.25O/: structure-3.vasp  structure-4.vasp  structure-8.vasp
LNO_001_2x1x1_results/0.75Li0.5O/: structure-15.vasp  structure-3.vasp
LNO_001_2x1x1_results/0.75Li0.75O/: structure-1.vasp  structure-10.vasp  structure-11.vasp
LNO_001_2x1x1_results/0Li0.5O/: structure-2.vasp
LNO_001_2x1x1_results/0Li0.75O/: structure-0.vasp
LNO_001_2x1x1_results/1Li0.25O/: structure-1.vasp
LNO_001_2x1x1_results/1Li0.75O/: structure-0.vasp  structure-2.vasp
LNO_001_results/LNO_001_1x2x1_Li-term/: notes.txt
LNO_001_results/LNO_001_2x1x1_Ni-term/: notes.txt
LNO_104/: LNO-104-1x2x1-shifted-5-fixed.vasp
LNO_104_1x2x1_results/3-relaxed-layers/: notes.txt
data/LNO_104/: LNO-104-1x2x1-shifted-3-fixed.vasp
data/LNO_104_parallel/: LNO-104-1x2x1-shifted-2-fixed-3-relaxed.vasp  LNO-104-1x2x1-shifted-4-fixed.vasp
data/LNO_104_perpendicular/: LNO-104-1x2x1-9layers3fixed-perpendicular.vasp  LNO-104-1x2x1-9layers5fixed-perpendicular.vasp  LNO-104-1x2x1-9layers7fixed-perpendicular.vasp
debug/1x1x1_0.0Li0.75O/: debug_conc_check.out  debug_site_restrictions.out  readcheck_enum.out  struct_enum.in  struct_enum.out
debug/1x1x1_0.5Li0.5O/: debug_site_restrictions.out  readcheck_enum.out  readcheck_makestr.out  struct_enum.in  struct_enum.out  symops_enum_parent_lattice.out
debug/1x1x1_0.5Li0O/: debug_conc_check.out  readcheck_enum.out  struct_enum.in
debug/1x1x1_0.75Li0.75O/: debug_conc_check.out  debug_dvec_rots.out  readcheck_enum.out
debug/1x1x1_0.75Li0O/: readcheck_enum.out  struct_enum.in  symops_enum_parent_lattice.out
debug/1x1x1_0.75Li1.0O/: debug_conc_check.out  readcheck_enum.out  readcheck_makestr.out  struct_enum.in  struct_enum.out
debug/1x1x1_0Li_1O/: readcheck_enum.out  struct_enum.in  symops_enum_parent_lattice.out
debug/1x1x1_1Li0.5O/: debug_conc_check.out  debug_site_restrictions.out  readcheck_enum.out  struct_enum.in  struct_enum.out
debug/1x1x1_1Li0O/: VERSION.enum  debug_conc_check.out  readcheck_enum.out  struct_enum.in  struct_enum.out
debug/2x1x1_0.75Li0O/: debug_conc_check.out  readcheck_enum.out
debug/2x1x1_0.75Li0O_other_enum/: debug_conc_check.out  struct_enum.in  (+1 more)
examples/: README.md  enumeration-python-api.ipynb  phase-diagram-cli.md  phase-diagram-python-api.ipynb  surface-enumeration-cli.md
new_functionality/: POSCAR_GaAs_110.vasp  POSCAR_Li2O_110.vasp  POSCAR_Li_100.vasp  POSCAR_Li_100_new.vasp
scripts/: discharge_pd_gene.py  surface-enumeration-prev.py  surface-enumeration.py  surface-pd-plot-backup.py  surface-pd-plot.py
surface_pd/: ToDo  __init__.py  _version.py  surface_enum.py  surface_plot.py
surface_pd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_configuration.py  test_configuration_loading.py  test_dataset_alignment.py  test_enumeration.py  test_generalized_cli.py  test_grand_potential.py  test_legacy_removal.py  test_li_tm_o_regression.py  test_migrated_battery_examples.py  test_observability.py  test_packaging.py  test_pd_data.py  test_phase_data.py  test_phase_data_io.py  test_phase_diagram.py  test_phase_diagram_plotting.py  test_plot.py  test_project_metadata.py  test_public_api.py  test_reference_energies.py  test_surface_energy.py  test_surface_enumerator.py  test_thermodynamics.py  test_tutorial_notebooks.py  test_util.py
(+2406 files in other folders)
