[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-pd"
dynamic = ["version"]
description = "Generation of surface phase diagrams"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Xinhao Li", email = "xinhao.li@columbia.edu"},
]
maintainers = [
    {name = "Xinhao Li", email = "xinhao.li@columbia.edu"},
    {name = "Alexander Urban", email = "a.urban@columbia.edu"},
]
keywords = ["materials science", "phase diagrams", "surface reconstruction", "DFT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "monty>=2024.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "pymatgen>=2024.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/urban-group/surface-pd"
Documentation = "https://surface-pd.readthedocs.io"
Repository = "https://github.com/urban-group/surface-pd"
Issues = "https://github.com/urban-group/surface-pd/issues"

[project.scripts]
surface-enumeration = "surface_pd.cli.surface_enumeration:main"
surface-pd-plot = "surface_pd.cli.surface_pd_plot:main"
generate-discharge-pd = "surface_pd.cli.discharge_pd_gene:main"

[tool.setuptools.packages.find]
include = ["surface_pd*"]

[tool.setuptools.package-data]
surface_pd = ["schemas/*.json"]

[tool.setuptools.dynamic]
version = {attr = "surface_pd._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=surface_pd --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["surface_pd"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    # Scientific APIs and formulas commonly use symbols such as V, T, G,
    # nLi, and nTM. Renaming existing public arguments would be disruptive
    # and would make formulas less recognizable.
    "N803",  # invalid-argument-name
    "N806",  # non-lowercase-variable-in-function
    # These docstring checks are too prescriptive for existing exception
    # message methods and descriptive scientific APIs.
    "D105",  # undocumented-magic-method
    "D401",  # non-imperative-mood
    "D404",  # docstring-starts-with-this
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
